@@ -3,3 +3,19 @@
 - CS 개념: 프로세스, 스레드, 컨텍스트 스위칭
 - Java 실험: Thread vs ExecutorService 동작 비교
 - Spring 실무: @Async와 스레드풀 설정 (TaskExecutor)
+- 
+# 2주차 — 메모리 구조와 GC
+
+- CS 개념: Stack / Heap / Garbage Collection
+
+- Java 실험: 객체 생성 후 GC 로그 분석 (-XX:+PrintGCDetails)
+
+- Spring 실무: Bean Scope과 객체 재사용 전략
+
+# 3주차 — 네트워크와 HTTP
+
+- CS 개념: TCP, HTTP 1.1 vs 2, Keep-Alive
+
+- Java 실험: HttpURLConnection vs WebClient 요청 비교
+
+- Spring 실무: 커넥션 풀 설정 (connectionTimeout, maxConnections)
